##Text encoding: utf-8

2011-05-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcugtk/gcuperiodic.c: make it work again.
	* programs/3d/Makefile.am: make things link again.
	* ui/libgcu/gcuperiodic.ui: fixed labels positions.

2011-05-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post branching version bump (0.13.4).
	* all files: port to gtk+-3.0.

2011-05-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: fixed make dist.
	* libs/gcu/application.cc: removed obsolete header.
	* tests/Makefile.am: fixed libs.

2011-05-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/space-groups.xml.in: fixed space group P -2yac.
	* libs/gcp/molecule.cc: when loaded, update parent.
	* plugins/paint/selection/group.cc: really support brackets.

2011-05-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/brackets.cc: two brackets should not enclose the same objects set.
	* plugins/paint/selection/bracketstool.cc: ditto.

2011-05-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/brackets.cc: don't accept unconnected atoms inside brackets.
	* libs/gcp/brackets.h: ditto.
	* libs/gcp/fragment.h: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcp/view.cc: ditto.
	* libs/gcu/atom.cc: ditto.
	* libs/gcu/atom.h: ditto.
	* libs/gcu/bond.cc: ditto.
	* libs/gcu/bond.h: ditto.
	* plugins/paint/selection/bracketstool.cc: ditto.

2011-05-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogcrystalapp.cc: fixed g++-4.6 warnings.
	* libs/gccv/arrow.h: ditto.
	* libs/gccv/text.cc: ditto.
	* libs/gcp/brackets.cc: don't accept several brackets around the same object.
	* libs/gcp/brackets.h: ditto.
	* libs/gcp/fontsel.cc: fixed g++-4.6 warnings.
	* libs/gcp/plugin.cc: really clear plugins data.
	* libs/gcp/plugin.h: fixed documentation.
	* libs/gcp/widgetdata.cc: don't accept several brackets around the same object.
	* libs/gcr/document.cc: fixed g++-4.6 warnings.
	* libs/gcu/chain.cc: ditto.
	* libs/gcu/formula.cc: ditto.